Fix request #10526: MOTD is not displayed in BurningParrot
Create file /etc/tuleap/site-content/en_US/others/motd.txt and add some
content in it. The motd is displayed both in FlamingParrot and
BurningParrot.

If the viewport is resized and the motd becomes bigger due to line
wrapping, then the main content is not hidden by the header.

On IE, in CompatibilityMode, a deprecation message is displayed. No
effort is made to properly style the motd (eg: top alignement) in
Compatibility Mode as per UXD request.

Background color is changed from bright blue to sidebar background
color.

--- a/src/www/themes/FlamingParrot/css/utils/_navbar.scss
+++ b/src/www/themes/FlamingParrot/css/utils/_navbar.scss
@@ -57,10 +57,12 @@
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
 
     & > .motd {
-        padding: 13px 10px 12px;
-        background: #0e73c2;
+        padding: 20px;
+        background: $sidebar-background;
         color: #ffffff;
         font-family: 'SourceSansPro', 'Helvetica Neue', Arial, sans-serif;
+        font-size: 16px;
+        line-height: 26px;
         text-align: center;
 
         a {
